== Git (ast - future 0.2)

Blurb ideas

* We need updated translations! (List all incomplete languages and what the missing keywords are)
* Cucumber 0.2 runs about X times faster than Cucumber 0.1.16
* Cucumber 0.2 is about 2/3 the size of Cucumber 0.1.16, and it is 2-3 times faster to install (less RDoc/Ri).

=== Existing features that don't work yet:
* --exclude
* --scenario
* snippets
* Several disabled specs should be fixed or removed
* Make all self-test features pass
* Support multiple --format switches in one run

== Bugfixes
* TODO Autotest uses file:line instead of --scenario (current impl doesn't work on Windows)

=== New features
* TODO: --no-multiline
* TODO: Autoformatting (--autoformat -a)
* TODO: "Background" section
* TODO: --tags
* Run cucumber --language help to see all supported languages.
* Run cucumber --language LANG help to see keywords for a given language.
* Multiline arguments (tables and """ strings) are printed in the output
* It's no longer necessary to compile the Treetop grammar when adding a new language. Localised parser is generated at runtime.

=== Removed features
* "GivenScenario" is gone. Instead you can use "Background" or call Steps from Steps.
* "More Examples" is gone. "Scenario" + "More Examples" is no longer supported. Use "Scenario Outline" + "Examples" instead.
* Pure Ruby features are no longer supported

== Git (master)

=== New features

* Finnish translation (Tero Tilus)
* Use Webrat's #contain matcher in generated "I should (not) see" step definitions

== 0.1.16 2009-01-19

This is a small bugfix release. The most notable improvement is compatibility with Webrat 0.4. Rails/Webrat users should
upgrade both Cucumber and Webrat gems.

=== New features
* Allow argument placeholders in step tables and multiline comments (#121 Joseph Wilk)
* Scenario Outline can be followed by several named Examples sections (#123 Aslak Hellesøy)