@@ -53,6 +53,7 @@ module Cucumber
 
       def visit_feature_element(feature_element)
         @indent = 2
+        @last_undefined = feature_element.undefined?
         feature_element.accept(self)
         @io.puts
       end
@@ -67,7 +68,9 @@ module Cucumber
       end
 
       def visit_scenario_name(keyword, name, file_line, source_indent)
-        @io.print("  #{keyword} #{name}")
+        line = "  #{keyword} #{name}"
+        line = format_string(line, :undefined) if @last_undefined
+        @io.print(line)
         if @options[:source]
           line_comment = " # #{file_line}".indent(source_indent)
           @io.print(format_string(line_comment, :comment))
