@@ -2,6 +2,7 @@
 
 Blurb ideas
 
+* Fully backwards compatible with 0.1.16 (if you find issues - please report during beta period)
 * We need updated translations! (List all incomplete languages and what the missing keywords are)
 * Cucumber 0.2 runs about X times faster than Cucumber 0.1.16
 * Cucumber 0.2 is about 2/3 the size of Cucumber 0.1.16, and it is 2-3 times faster to install (less RDoc/Ri).
@@ -15,6 +16,7 @@ Blurb ideas
 * Support multiple --format switches in one run
 
 == Bugfixes
+* TODO: Fix http://rspec.lighthouseapp.com/projects/16211/tickets/65-pending-steps-in-steps-called-from-steps
 * TODO Autotest uses file:line instead of --scenario (current impl doesn't work on Windows)
 
 === New features
